--- a/environment.yaml
+++ b/environment.yaml
@@ -24,9 +24,12 @@ dependencies:
   - kiwisolver=1.3.0=py36h2531618_0
   - lcms2=2.11=h396b838_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libblas=3.8.0=21_mkl
+  - libcblas=3.8.0=21_mkl
   - libedit=3.1.20191231=h14c3975_1
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.1.0=hdf63c60_0
+  - liblapack=3.8.0=21_mkl
   - libpng=1.6.37=hbc83047_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.1.0=h2733197_1
@@ -46,7 +49,6 @@ dependencies:
   - olefile=0.46=py36_0
   - openssl=1.1.1i=h27cfd23_0
   - pcre=8.44=he6710b0_0
-  - pillow=8.0.1=py36he98fc37_0
   - pip=20.3.3=py36h06a4308_0
   - pyparsing=2.4.7=py_0
   - pyqt=5.9.2=py36h05f1152_2
@@ -75,26 +77,35 @@ dependencies:
     - cattrs==1.0.0
     - chardet==4.0.0
     - cloudpickle==1.6.0
+    - future==0.18.2
     - google-auth==1.24.0
     - google-auth-oauthlib==0.4.2
     - grpcio==1.34.0
+    - gym==0.18.0
+    - gym-unity==0.23.0
     - h5py==3.1.0
     - idna==2.10
     - importlib-metadata==3.3.0
+    - joblib==1.0.0
     - markdown==3.3.3
     - mlagents==0.23.0
     - mlagents-envs==0.23.0
     - numpy==1.18.5
     - oauthlib==3.1.0
+    - pillow==7.2.0
     - protobuf==3.14.0
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
+    - pyglet==1.5.0
     - pyyaml==5.3.1
     - requests==2.25.1
     - requests-oauthlib==1.3.0
     - rsa==4.6
+    - scikit-learn==0.24.0
+    - scipy==1.5.4
     - tensorboard==2.4.0
     - tensorboard-plugin-wit==1.7.0
+    - threadpoolctl==2.1.0
     - urllib3==1.26.2
     - werkzeug==1.0.1
     - yolk3k==0.9
